# IA2-Phase2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  chromium_commit  prepare.py  validate-segments.py
examples/video_player/: CMakeLists.txt  video_decoder.c  video_player.c
header-rewriter/: CAbi.h  CMakeLists.txt  CreateCodeGenerator.cpp  CreateCodeGenerator.h  DetermineAbi.cpp  DetermineAbi.h  GenCallAsm.cpp  GenCallAsm.h  HeaderRewriter.cpp  Main.cpp  RewriteHeaders.cpp  RewriteHeaders.h  SourceRewriter.cpp  TypeOps.cpp
header-rewriter/tests/: CMakeLists.txt  generate-checks.sh  lit.cfg.py  lit.site.cfg.py.in
libia2/: CMakeLists.txt  Cargo.toml  build.rs  dynsym.syms  exit.c  ia2.c  main.c  padding.ld  padding_lib.ld  shared_lib.ld  threads.c
libia2/benches/: micro.rs
libia2/include/: ia2.h  ia2_compartment_init.inc  ia2_get_pkey.h  ia2_internal.h  internal_ia2.h  permissive_mode.h  test_fault_handler.h
libia2/src/: alloc.rs  lib.rs  pkru.rs  scrub_registers.s
libia2/test/: CMakeLists.txt  permissive_mode.c
libia2/untrusted-test-ffi/: Cargo.toml  build.rs
partition-alloc/: CMakeLists.txt  README.md
partition-alloc/include/: ia2_allocator.h  ia2_get_pkey.h
partition-alloc/src/: allocator_shim.cc  allocator_shim.h  allocator_shim_default_dispatch_to_partition_alloc.cc  get_pkey.h  shared_allocator.cc
rewriter/: CMakeLists.txt  DetermineAbi.h  GenCallAsm.cpp  GenCallAsm.h  SourceRewriter.cpp
rewriter/tests/: CMakeLists.txt  lit.cfg.py
runtime/: CMakeLists.txt  forbid_paths.c  forbid_paths.h  get_inferior_pkru.c  get_inferior_pkru.h  landlock.c  landlock.h  mem_region.h  memory_map.c  memory_map.h  mmap_event.c  mmap_event.h  read_pkru_demo.c  seccomp_filter.c  seccomp_filter.h  seccomp_filter_demo.c  start.c  strv.h  track_memory_map.c  track_memory_map.h  track_memory_map_demo.c
runtime/libia2/: CMakeLists.txt  bootstrap_shim.version  destructor_runtime.c  destructors.c  dlopen_wrapper.c  dynsym.syms  exit.c  exit_callgates.c  exit_callgates_x86_64.c  exit_finalize_callgate.c  exit_policy.c  ia2.c  init.c  libia2_bootstrap_shim.c  loader_gate.c  loader_gate_stub.c  main.c  memory_maps.c  memory_maps.h  mmap_wrapper.c  pkru_helpers.c  thread_name.c  thread_name.h  threads.c  trace_exit.c
runtime/memory-map/: Cargo.toml  cbindgen.toml
runtime/partition-alloc/: CMakeLists.txt  README.md
runtime/tracer/: CMakeLists.txt  forbid_paths.c  get_inferior_pkru.c  get_inferior_pkru.h  landlock.c  landlock_demo.c  landlock_syscall.h  mem_region.h  memory_map.h  mmap_event.c  mmap_event.h  seccomp_filter.c  seccomp_filter.h  start.c  strv.c  track_memory_map.c  track_memory_map.h  track_memory_map_demo.c
runtime/type-registry/: CMakeLists.txt  Cargo.toml
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  run_all_dl_debug_tests.sh
tests/abi/: CMakeLists.txt  abi.c  main.c
tests/common/: ia2_test_pkey_utils.h
tests/destructors/: main.c  plugin.c
tests/dl_debug_exit_callgate/: CMakeLists.txt  library.c  main.c
tests/dl_debug_exit_callgate_standalone/: CMakeLists.txt  library.h  main.c
tests/dl_debug_exit_phase0/: PHASE0_PROGRESS.md
tests/dl_debug_getpwnam/: CMakeLists.txt  library.c  library.h  main.c
tests/dl_debug_mbstowcs_test/: CMakeLists.txt  library.c  library.h  main.c
tests/dl_debug_test/: CMakeLists.txt  EXIT_HANDLER_IMPLEMENTATION_PLAN.md  library.c  library.h  main.c  plugin_fault.c  run_all_tests.sh
tests/ffmpeg/: CMakeLists.txt  main.c
tests/global_fn_ptr/: CMakeLists.txt  main.c  operations.c
tests/header_includes/: CMakeLists.txt  impl.c  liboption.c  main.c
tests/heap_two_keys/: CMakeLists.txt  main.c  plugin.c
tests/libc_default_compartment/: CMakeLists.txt  library.c  library.h  main.c
tests/libusb/: CMakeLists.txt  libusb.test  main.c
tests/loader_minimal_malloc/: CMakeLists.txt  main.c
tests/macro_attr/: CMakeLists.txt  functions.c  main.c
tests/memory_maps/: 2.c  3.c  4.c  CMakeLists.txt  main.c
tests/minimal/: CMakeLists.txt  main.c  minimal.c
tests/minimal_no_criterion/: CMakeLists.txt  main.c  minimal.c
tests/mmap_loop/: CMakeLists.txt  main.c
tests/namespaces/: CMakeLists.txt  main.cpp  random.cpp  random.hpp
tests/permissive_mode/: CMakeLists.txt  permissive_mode.c
tests/post_condition/: CMakeLists.txt  dav1d.c  main.c
tests/pre_post_condition/: CMakeLists.txt  main.c  src.c
tests/protected_threads/: CMakeLists.txt  library.c  main.c
tests/read_config/: CMakeLists.txt  builtin.c  main.c  plugin.c
tests/recursion/: CMakeLists.txt  dso.c  main.c
tests/rewrite_fn_ptr_eq/: lib.c  main.c
tests/rewrite_macros/: CMakeLists.txt  lib.c  main.c
tests/ro_sharing/: CMakeLists.txt  main.c  plugin.c
tests/shared_data/: CMakeLists.txt  access_shared.c  main.c
tests/should_segfault/: CMakeLists.txt  main.c  print_secret.c
tests/sighandler/: CMakeLists.txt  lib.c  main.c
tests/signals/: CMakeLists.txt  lib.c  main.c
tests/simple1/: CMakeLists.txt  main.c  simple1.c
tests/static_addr_taken/: CMakeLists.txt  lib.c  main.c
tests/structs/: CMakeLists.txt  main.c  structs.c
tests/structs_no_criterion/: CMakeLists.txt  main.c  minimal.c
tests/terminating_threads/: CMakeLists.txt  lib.c  main.c
tests/threads/: CMakeLists.txt  library.c  main.c
tests/three_keys_libc_autowrap/: CMakeLists.txt  lib_a.c  lib_b.c  main.c
tests/three_keys_minimal/: CMakeLists.txt  lib_1.c  lib_2.c  main.c
tests/tls_one_page_repro/: CMakeLists.txt  attempt_log.md  library.c  main.c  shared_tls.c  sweep_tls_layout.sh
tests/tls_protected/: CMakeLists.txt  library.c  main.c
tests/trusted_direct/: CMakeLists.txt  main.c  plugin.c
tests/trusted_indirect/: CMakeLists.txt  main.c  rand_op.c
tests/two_keys_minimal/: .main.c.swp  .plugin.c.swp  CMakeLists.txt  main.c  plugin.c
tests/two_shared_ranges/: CMakeLists.txt  main.c  plugin.c
tests/type_confusion/: CMakeLists.txt  dav1d.c  main.c
tests/untrusted_executable/: CMakeLists.txt  foo.c  main.c
tests/untrusted_indirect/: CMakeLists.txt  foo.c  main.c
tools/rewriter/: CAbi.h  CLI11.hpp  CMakeLists.txt  (+12 more)
(+485 files in other folders)
