[package]
name = "ia2"
version = "0.1.0"
authors = ["Stephen Crane <sjc@immunant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ia2"
crate-type = ["cdylib"]

[dependencies]
libc = { version = "0.2", default_features = false }

[build-dependencies]
cbindgen = "0.20.0"

[dev-dependencies]

[features]
